K8S/employeecrud-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: employeecrudnpservice-srv
spec:
  type: NodePort
  selector:
    app: employeecrudservice
  ports:
    - name: employeecrudservice
      protocol: TCP
      port: 80
      targetPort: 80
