K8S/gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayservice
  template:
    metadata:
      labels:
        app: gatewayservice
    spec:
      containers:
        - name: gatewayservice
          image: hassan970/firstgatewayservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: gatewayservice
  ports:
  - name: gatewayservice
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: gatewayservice
  ports:
    - name: gateway-port
      protocol: TCP
      port: 9090
      targetPort: 80
