K8S/mssql-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssqlauth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssqlauth
  template:
    metadata:
      labels:
        app: mssqlauth
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqlauthdb
      volumes:
      - name: mssqlauthdb
        persistentVolumeClaim:
          claimName: mssql-claim2
---
apiVersion: v1
kind: Service
metadata:
  name: mssqlauth-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssqlauth
  ports:
  - name: mssqlauth
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssqlauth-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssqlauth
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
